--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ attrs==25.3.0
 blinker==1.9.0
 cachetools==5.5.2
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
+cryptography==44.0.2
 gitdb==4.0.12
 GitPython==3.1.44
 idna==3.10
@@ -17,11 +19,15 @@ narwhals==1.31.0
 numpy==2.2.4
 packaging==24.2
 pandas==2.2.3
+pdfminer.six==20231228
+pdfplumber==0.11.5
 pillow==11.1.0
 protobuf==5.29.3
 pyarrow==19.0.1
+pycparser==2.22
 pydeck==0.9.1
 PyPDF2==3.0.1
+pypdfium2==4.30.1
 python-dateutil==2.9.0.post0
 python-pptx==1.0.2
 pytz==2025.1
